--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
+# pip list --format=freeze
+anyio==4.2.0
+certifi==2024.7.4
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.27.0
+idna==3.7
+pip==24.2
+quantiphy==2.20
 setuptools==72.1.0
+sniffio==1.3.0
 wheel==0.43.0
