--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 # pip list --format=freeze
 anyio==4.2.0
-certifi==2024.7.4
+certifi==2024.8.30
+distlib==0.3.8
+filelock==3.13.1
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.27.0
 idna==3.7
 pip==24.2
+platformdirs==3.10.0
+python-dotenv==1.0.1
 quantiphy==2.20
 setuptools==72.1.0
 sniffio==1.3.0
+virtualenv==20.26.1
 wheel==0.43.0
